--- a/index.html
+++ b/index.html
@@ -17,17 +17,37 @@
                 <button class="option" data-type="acc">Acc</button>
             </div>
             <div class="option-group">
-                <button class="option" data-type="ev">Enkelvoud</button>
-                <button class="option" data-type="mv">Meervoud</button>
+                <button class="option" data-type="ev">Ev</button>
+                <button class="option" data-type="mv">Mv</button>
             </div>
             <div class="option-group">
-                <button class="option" data-type="m">Mannelijk</button>
-                <button class="option" data-type="f">Vrouwelijk</button>
-                <button class="option" data-type="n">Onzijdig</button>
+                <button class="option" data-type="m">M</button>
+                <button class="option" data-type="f">F</button>
+                <button class="option" data-type="n">N</button>
             </div>
         </div>
-        <button id="checkBtn">Controleren</button>
+        <button id="extraOptionBtn">Nog een optie</button>
+        <div class="options" id="extraOptions"  data-type="tweede">
+            <div class="option-group">
+                <button class="option" data-type="nom">Nom</button>
+                <button class="option" data-type="gen">Gen</button>
+                <button class="option" data-type="dat">Dat</button>
+                <button class="option" data-type="acc">Acc</button>
+            </div>
+            <div class="option-group">
+                <button class="option" data-type="ev">Ev</button>
+                <button class="option" data-type="mv">Mv</button>
+            </div>
+            <div class="option-group">
+                <button class="option" data-type="m">M</button>
+                <button class="option" data-type="f">F</button>
+                <button class="option" data-type="n">N</button>
+            </div>
+        </div>
+        <button id="checkBtn" disabled>Controleren</button>
     </div>
+</div>
+    <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
