Fixed button layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="option" data-type="n">N</button>
             </div>
         </div>
-        <button id="extraOptionBtn">Nog een optie</button>
+        <button class="action-button" id="extraOptionBtn">Nog een optie?</button>
         <div class="options" id="extraOptions">
             <div class="option-group">
                 <button class="option" data-type="nom">Nom</button>
@@ -44,9 +44,8 @@
                 <button class="option" data-type="n">N</button>
             </div>
         </div>
-        <button id="checkBtn" disabled type="button">Controleren</button>
+        <button id="checkBtn" class="action-button" type="button">Controleren</button>
     </div>
-</div>
     <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
