Fixed emojicons and updated menu margin. Removed geslacht menu option

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        Woord
+        <div class="menuHeader">Woord</div>
         <div id="menuWords" class="menuWords"></div>
-        Naamval
+        <div class="menuHeader">Naamval</div>
         <div id="menuNaamval" class="menuNaamval"></div>
-        Getal
+        <div class="menuHeader">Getal</div>
         <div id="menuCard" class="menuCard"></div>
-        Geslacht
-        <div id="menuGeslacht" class="menuGeslacht"></div>
    </div>
    <div id="header">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
