--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Griekse Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -15,51 +17,82 @@
         <div id="menuNaamval" class="menuNaamval"></div>
         <div class="menuHeader">Getal</div>
         <div id="menuCard" class="menuCard"></div>
-   </div>
-   <div id="header">
+        <br>
+        <br>
+    </div>
+    <div id="header">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-        <div id="emoticon" class="emoticon" ></div>
+        <div id="emoticon" class="emoticon"></div>
     </div>
     <div class="container">
         <h1 class="word"></h1>
-        <div class="options" id="firstGroup">
-            <div class="option-group" >
-                <button class="option" data-type="nom">Nom</button>
-                <button class="option" data-type="gen">Gen</button>
-                <button class="option" data-type="dat">Dat</button>
-                <button class="option" data-type="acc">Acc</button>
+        <div class="options-frame" id="firstGroupFrame">
+            <div class="options" id="firstGroup">
+                <div class="option-group">
+                    <button class="option" data-type="nom">Nom</button>
+                    <button class="option" data-type="gen">Gen</button>
+                    <button class="option" data-type="dat">Dat</button>
+                    <button class="option" data-type="acc">Acc</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="ev">Ev</button>
+                    <button class="option" data-type="mv">Mv</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="m">M</button>
+                    <button class="option" data-type="f">F</button>
+                    <button class="option" data-type="n">N</button>
+                </div>
             </div>
-            <div class="option-group">
-                <button class="option" data-type="ev">Ev</button>
-                <button class="option" data-type="mv">Mv</button>
-            </div>
-            <div class="option-group">
-                <button class="option" data-type="m">M</button>
-                <button class="option" data-type="f">F</button>
-                <button class="option" data-type="n">N</button>
+            
+        </div>
+        <button class="action-button" id="secondOptionBtn">Nog een tweede optie?</button>
+        <div class="options-frame" id="secondGroupFrame">
+            <div class="options" id="secondGroup">
+                <div class="option-group">
+                    <button class="option" data-type="nom">Nom</button>
+                    <button class="option" data-type="gen">Gen</button>
+                    <button class="option" data-type="dat">Dat</button>
+                    <button class="option" data-type="acc">Acc</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="ev">Ev</button>
+                    <button class="option" data-type="mv">Mv</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="m">M</button>
+                    <button class="option" data-type="f">F</button>
+                    <button class="option" data-type="n">N</button>
+                </div>
             </div>
         </div>
-        <button class="action-button" id="extraOptionBtn">Nog een optie?</button>
-        <div class="options" id="extraOptions">
-            <div class="option-group">
-                <button class="option" data-type="nom">Nom</button>
-                <button class="option" data-type="gen">Gen</button>
-                <button class="option" data-type="dat">Dat</button>
-                <button class="option" data-type="acc">Acc</button>
-            </div>
-            <div class="option-group">
-                <button class="option" data-type="ev">Ev</button>
-                <button class="option" data-type="mv">Mv</button>
-            </div>
-            <div class="option-group">
-                <button class="option" data-type="m">M</button>
-                <button class="option" data-type="f">F</button>
-                <button class="option" data-type="n">N</button>
+        
+        <div class="options-frame" id="thirdGroupFrame">
+            <div class="options" id="thirdGroup">
+                <div class="option-group">
+                    <button class="option" data-type="nom">Nom</button>
+                    <button class="option" data-type="gen">Gen</button>
+                    <button class="option" data-type="dat">Dat</button>
+                    <button class="option" data-type="acc">Acc</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="ev">Ev</button>
+                    <button class="option" data-type="mv">Mv</button>
+                </div>
+                <div class="option-group">
+                    <button class="option" data-type="m">M</button>
+                    <button class="option" data-type="f">F</button>
+                    <button class="option" data-type="n">N</button>
+                </div>
             </div>
         </div>
+        <button class="action-button" id="thirdOptionBtn">Nog een derde optie?</button>
+        <button id="resetBtn" class="action-button" type="button">Reset</button>
         <button id="checkBtn" class="action-button" type="button">Controleren</button>
+        <button id="nextBtn" class="action-button" type="button">Volgende</button>
     </div>
     <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
