First Latin commit

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="menucontainer">
             <div class="column">
                 <h2>Latijn</h2>
-                <button id="LatijnNaamwoord">Naamwoorden</button>
+                <button class="menuButton" id="LatijnNaamwoord">Naamwoorden</button>
             </div>
             <div class="column">
                 <h2>Grieks</h2>
-                <button id="GrieksNaamwoord">Lidwoorden en naamwoorden</button>
+                <button class="menuButton"  id="GrieksNaamwoord">Lidwoorden en naamwoorden</button>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@
         <br>
     </div>
     <div id="header">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <span id="hamburger" style="font-size:30px;cursor:pointer">&#9776;</span>
         <div id="emoticon" class="emoticon"></div>
     </div>
     <div class="container">
@@ -45,7 +45,7 @@
                     <button class="option" data-type="gen">Gen</button>
                     <button class="option" data-type="dat">Dat</button>
                     <button class="option" data-type="acc">Acc</button>
-                    <button class="option latin" data-type="acc">Abl</button>
+                    <button class="option latin" data-type="abl">Abl</button>
                 </div>
                 <div class="option-group">
                     <button class="option" data-type="ev">Ev</button>
@@ -67,7 +67,7 @@
                     <button class="option" data-type="gen">Gen</button>
                     <button class="option" data-type="dat">Dat</button>
                     <button class="option" data-type="acc">Acc</button>
-                    <button class="option latin" data-type="acc">Abl</button>
+                    <button class="option latin" data-type="abl">Abl</button>
                 </div>
                 <div class="option-group">
                     <button class="option" data-type="ev">Ev</button>
@@ -88,7 +88,7 @@
                     <button class="option" data-type="gen">Gen</button>
                     <button class="option" data-type="dat">Dat</button>
                     <button class="option" data-type="acc">Acc</button>
-                    <button class="option latin" data-type="acc">Abl</button>
+                    <button class="option latin" data-type="abl">Abl</button>
                 </div>
                 <div class="option-group">
                     <button class="option" data-type="ev">Ev</button>
