--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             
         </div>
-        <button class="action-button" id="secondOptionBtn">Nog een tweede optie?</button>
+        <button class="action-button" id="secondOptionBtn">Nog een optie?</button>
         <div class="options-frame" id="secondGroupFrame">
             <div class="options" id="secondGroup">
                 <div class="option-group">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <button class="action-button" id="thirdOptionBtn">Nog een derde optie?</button>
+        <button class="action-button" id="thirdOptionBtn">Nog een optie?</button>
         <button id="resetBtn" class="action-button" type="button">Reset</button>
         <button id="checkBtn" class="action-button" type="button">Controleren</button>
         <button id="nextBtn" class="action-button" type="button">Volgende</button>
