Menu filtering and first couple of latin werkwoorden added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span title="Close Menu" class="closebtn" style="cursor:pointer" id="closeMenu">&times;</span>
         <div id="naamwoordenMenu" class="naamwoorden">
             <div class="menuHeader">Naamwoord</div>
-            <div id="miNaamwoorden" class="menuWords"></div>
+            <div id="miNaamwoorden" class="menuNaamwoordenords"></div>
             <div class="menuHeader">Naamval</div>
             <div id="miNaamval" class="menuNaamval"></div>
             <div class="menuHeader">Getal</div>
@@ -35,13 +35,13 @@
         </div>
         <div id="werkwoordenMenu" class="werkwoorden">
             <div class="menuHeader">Werkwoord</div>
-            <div id="miWerkwoorden" class="menuWords"></div>
+            <div id="miWerkwoorden" class="miWerkwoorden"></div>
             <div class="menuHeader">Wijs</div>
-            <div id="miWijs" class="menuWijs"></div>
+            <div id="miWijs" class="miWW"></div>
             <div class="menuHeader">Tijd</div>
-            <div id="miTijd" class="menuTijd"></div>
+            <div id="miTijd" class="miWW"></div>
             <div class="menuHeader">Diathese</div>
-            <div id="miDiathese" class="miDiathese"></div>
+            <div id="miDiathese" class="miWW"></div>
         </div>
         <br>
         <br>
