Fixed the loading on Safari and restored translations loading

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ button {
     <div id="mainmenu">
         <div class="menucontainer">
             <div id="Loading"></div>
-            <div class="column" style="display: nonewel;">
+            <div class="column" style="display: none">
                 <h2 data-translate="latinTitle">Latijn</h2>
                 <button class="menuButton" id="latinVerbs" data-translate="latinVerbs">Werkwoorden</button>
                 <button class="menuButton" id="latinNouns" data-translate="latinNouns">Naamwoorden</button>
             </div>
-            <div class="column" style="display: nonewel;">
+            <div class="column" style="display: none">
                 <h2 data-translate="ancientGreekTitle">Oudgrieks</h2>
                 <button class="menuButton" id="greekVerbs" data-translate="greekVerbs">Werkwoorden</button>
                 <button class="menuButton" id="greekNouns" data-translate="greekNouns">Lidwoorden en naamwoorden</button>
