--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="nl">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,38 +9,43 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            
             display: flex;
             justify-content: center;
         }
-        .menucontainer {
-    display: flex;
-    margin-top: 10vh;
-}
-.column {
-    flex: 1;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-.menuButton{
-    margin-bottom: 15px; 
-}
 
-button {
-    display: inline-block; 
-    padding: 10px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    cursor: pointer;
-    width: 92%; 
-    box-shadow: 4px 8px 10px 1px rgba(0,0,0,0.2);
-    transition-duration: 0.2s;
-    z-index: 3; 
-    position: relative; 
-}
-    </style>    
- </head>
+        .menucontainer {
+            display: flex;
+            margin-top: 10vh;
+        }
+
+        .column {
+            flex: 1;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .menuButton {
+            margin-bottom: 15px;
+        }
+
+        button {
+            display: inline-block;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 92%;
+            box-shadow: 4px 8px 10px 1px rgba(0, 0, 0, 0.2);
+            transition-duration: 0.2s;
+            z-index: 3;
+            position: relative;
+        }
+        .sliding-window {
+             right: -100%; /* Off-screen by default */
+        }
+    </style>
+</head>
 
 <body>
     <noscript>Sorry, Javascript is required</noscript>
@@ -54,35 +58,39 @@ button {
                 <button class="menuButton" id="latinNouns" data-translate="latinNouns">Naamwoorden</button>
             </div>
             <div class="column" style="display: none">
-                <h2 data-translate="ancientGreekTitle">Oudgrieks</h2>
+                <h2 data-translate="ancientGreekTitle">Grieks</h2>
                 <button class="menuButton" id="greekVerbs" data-translate="greekVerbs">Werkwoorden</button>
-                <button class="menuButton" id="greekNouns" data-translate="greekNouns">Lidwoorden en naamwoorden</button>
-            </div>            
+                <button class="menuButton" id="greekNouns" data-translate="greekNouns">Lidwoorden en
+                    naamwoorden</button>
+            </div>
         </div>
     </div>
     <div id="mySidenav" class="sidenav" style="display:none">
-        <span title="Close Menu" class="closebtn" style="cursor:pointer" id="closeMenu">&times;</span>
+        <div><span title="Close Menu" class="closebtn" style="cursor:pointer" id="closeMenu">&times;</span></div>
         <div id="naamwoordenMenu" class="naamwoorden">
             <div class="menuHeader" data-translate="Filters">Filters</div>
-            <div id="miNominals" class="menuNominals"></div>
+            <div id="miNominals" class="miForms"></div>
             <div class="menuHeader" data-translate="Nouns">Zelfstandig naamwoorden</div>
-            <div id="miNouns" class="menuNominals"></div>
+            <div id="miNouns" class="miForms"></div>
             <div class="menuHeader" data-translate="Adjectives">Bijvoegelijke naamwoorden</div>
-            <div id="miAdjectives" class="menuNominals"></div>
+            <div id="miAdjectives" class="miForms"></div>
             <div class="menuHeader" data-translate="Case">Naamval</div>
-            <div id="miNaamval" class="menuNaamval"></div>
+            <div id="miNaamval" class="miFilter"></div>
             <div class="menuHeader" data-translate="Number">Getal</div>
-            <div id="miCard" class="menuCard"></div>
+            <div id="miCard" class="miFilter"></div>
         </div>
         <div id="werkwoordenMenu" class="werkwoorden">
             <div class="menuHeader" data-translate="Verb">Werkwoord</div>
-            <div id="miWerkwoorden" class="miWerkwoorden"></div>
+            <div id="miWerkwoorden" class="miForms"></div>
             <div class="menuHeader" data-translate="Mood">Wijs</div>
-            <div id="miWijs" class="miWW"></div>
+            <div id="miWijs" class="miFilter"></div>
             <div class="menuHeader" data-translate="Tense">Tijd</div>
-            <div id="miTijd" class="miWW"></div>
+            <div id="miTijd" class="miFilter"></div>
             <div class="menuHeader" data-translate="Voice">Diathese</div>
-            <div id="miDiathese" class="miWW"></div>
+            <div id="miDiathese" class="miFilter"></div>
+        </div>
+        <div>
+            <h5 id="wordCount"></h5>
         </div>
         <br>
         <br>
@@ -94,64 +102,74 @@ button {
     <div class="container" style="display:none">
         <h1 id="word" class="word"></h1>
         <div id="groups">
-        <div class="options-frame" id="groupFrame0">
-            <div class="options werkwoorden">
-                <div class="option-group">
-                    <button class="option" data-type="ind">ind</button>
-                    <button class="option" data-type="imp" data-disGetal="0235">imp</button>
-                    <button class="option grieks" data-type="opt">opt</button>
-                    <button class="option" data-type="conj">conj</button>
-                    <button class="option" data-type="inf" data-disGetal="012345">inf</button>
-                    <button class="option" data-type="ptc" data-disGetal="012345">ptc</button>
+            <div class="options-frame" id="groupFrame0">
+                <div class="options werkwoorden">
+                    <div class="option-group">
+                        <button class="option" data-type="ind">ind</button>
+                        <button class="option" data-type="imp" data-disGetal="0235">imp</button>
+                        <button class="option greekOnly" data-type="opt">opt</button>
+                        <button class="option" data-type="conj">conj</button>
+                        <button class="option" data-type="inf" data-disGetal="012345">inf</button>
+                        <button class="option" data-type="ptc" data-disGetal="012345">ptc</button>
+                    </div>
+                    <div class="option-group">
+                        <button class="option" data-type="praes">praes</button>
+                        <button class="option" data-type="impf">impf</button>
+                        <button class="option" data-type="fut">fut</button>
+                        <button class="option greekOnly" data-type="aor">aor</button>
+                        <button class="option" data-type="perf">perf</button>
+                        <button class="option" data-type="plqpf">plqpf</button>
+                        <button class="option latijn" data-type="fex">fex</button>
+                    </div>
+                    <div class="option-group">
+                        <button class="option" data-type="1e-ev" data-translate="1st sg">1e ev</button>
+                        <button class="option" data-type="2e-ev" data-translate="2nd sg">2e ev</button>
+                        <button class="option" data-type="3e-ev" data-translate="3rd sg">3e ev</button>
+                        <button class="option" data-type="1e-mv" data-translate="1st pl">1e mv</button>
+                        <button class="option" data-type="2e-mv" data-translate="2nd pl">2e mv</button>
+                        <button class="option" data-type="3e-mv" data-translate="3rd pl">3e mv</button>
+                    </div>
+                    <div class="option-group">
+                        <button class="option" data-type="act">act</button>
+                        <button class="option greekOnly" data-type="med">med</button>
+                        <button class="option" data-type="pass">pass</button>
+                    </div>
                 </div>
-                <div class="option-group">
-                    <button class="option" data-type="praes">praes</button>
-                    <button class="option" data-type="impf">impf</button>
-                    <button class="option" data-type="fut">fut</button>
-                    <button class="option grieks" data-type="aor">aor</button>
-                    <button class="option" data-type="perf">perf</button>
-                    <button class="option" data-type="plqpf">plqpf</button>
-                    <button class="option latijn" data-type="fex">fex</button>
-                </div>
-                <div class="option-group">
-                    <button class="option" data-type="1e-ev" data-translate="1st sg">1e ev</button>
-                    <button class="option" data-type="2e-ev" data-translate="2nd sg">2e ev</button>
-                    <button class="option" data-type="3e-ev" data-translate="3rd sg">3e ev</button>
-                    <button class="option" data-type="1e-mv" data-translate="1st pl">1e mv</button>
-                    <button class="option" data-type="2e-mv" data-translate="2nd pl">2e mv</button>
-                    <button class="option" data-type="3e-mv" data-translate="3rd pl">3e mv</button>
-                </div>
-                <div class="option-group">
-                    <button class="option" data-type="act">act</button>
-                    <button class="option grieks" data-type="med">med</button>
-                    <button class="option" data-type="pass">pass</button>
-                </div>              
-            </div>
-            <div class="options naamwoorden">
-                <div class="option-group">
-                    <button class="option" data-type="nom">Nom</button>
-                    <button class="option" data-type="gen">Gen</button>
-                    <button class="option" data-type="dat">Dat</button>
-                    <button class="option" data-type="acc">Acc</button>
-                    <button class="option latijn" data-type="abl">Abl</button>
-                </div>
-                <div class="option-group">
-                    <button class="option" data-translate="Singular" data-type="ev">Ev</button>
-                    <button class="option" data-translate="Plural" data-type="mv">Mv</button>
-                </div>
-                <div class="option-group">
-                    <button class="option" data-type="m">M</button>
-                    <button class="option" data-type="f">F</button>
-                    <button class="option" data-type="n">N</button>
+                <div class="options naamwoorden">
+                    <div class="option-group">
+                        <button class="option" data-type="nom">nom</button>
+                        <button class="option" data-type="gen">gen</button>
+                        <button class="option" data-type="dat">dat</button>
+                        <button class="option" data-type="acc">acc</button>
+                        <button class="option latijn" data-type="abl">abl</button>
+                    </div>
+                    <div class="option-group">
+                        <button class="option" data-translate="Singular" data-type="ev">ev</button>
+                        <button class="option" data-translate="Plural" data-type="mv">mv</button>
+                    </div>
+                    <div class="option-group">
+                        <button class="option" data-type="m">m</button>
+                        <button class="option" data-type="f">f</button>
+                        <button class="option" data-type="n">n</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-        <button class="action-button" id="addOptionBtn" data-translate="Add Option?">Nog een optie?</button>
+        <button id="addOptionBtn" class="action-button" data-translate="Add Option?">Nog een optie?</button>
         <button id="resetBtn" class="action-button" type="button" data-translate="Reset">Reset</button>
         <button id="checkBtn" class="action-button" type="button" data-translate="Check">Controleren</button>
         <button id="nextBtn" class="action-button" type="button" data-translate="Next">Volgende</button>
-
+        <button id="seeResultsBtn" class="action-button" type="button" data-translate="SeeResults">Resultaat</button>
+    </div>
+    <div id="swContainer" style="display: none;">
+        <div id="slidingWindow" class="sliding-window">
+            <h1 id="resultsMessage" class="word"></h1>
+            <button id="everythingAgainButton" class="scoreButton" data-translate="everythingAgain">Deze selectie opnieuw oefenen</button>
+            <button id="onlyRepListButton" class="scoreButton" data-translate="onlyRepList">Foutenlijst nog een keer oefenen</button>
+            <button id="tigerModesButton" class="scoreButton" data-translate="tigerModes">Foutenlijst blijven oefenen tot alles goed is</button>
+            <button id="newSelectionButton" class="scoreButton" data-translate="makeNewSelection">Nieuwe selectie maken</button>
+            <!-- <button id="mainMenuButton" class="scoreButton">Hoofdmenu</button>-->
+        </div>
     </div>
     <script type="module" src="main.js"></script>
 </body>
