menu easy close, mood order change, english translate update

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             text-align: center;
             display: flex;
             flex-direction: column;
+            font-size: 140%; 
         }
 
         .menuButton {
             margin-bottom: 15px;
+            font-size: 130%; 
         }
 
         button {
@@ -107,18 +109,18 @@
                     <div class="option-group">
                         <button class="option" data-type="ind">ind</button>
                         <button class="option" data-type="imp" data-disGetal="0235">imp</button>
+                        <button class="option" data-type="conj" data-translate="conj">conj</button>
                         <button class="option greekOnly" data-type="opt">opt</button>
-                        <button class="option" data-type="conj">conj</button>
                         <button class="option" data-type="inf" data-disGetal="012345">inf</button>
                         <button class="option" data-type="ptc" data-disGetal="012345">ptc</button>
                     </div>
                     <div class="option-group">
-                        <button class="option" data-type="praes">praes</button>
+                        <button class="option" data-type="praes" data-translate="praes">praes</button>
                         <button class="option" data-type="impf">impf</button>
                         <button class="option" data-type="fut">fut</button>
                         <button class="option greekOnly" data-type="aor">aor</button>
                         <button class="option" data-type="perf">perf</button>
-                        <button class="option" data-type="plqpf">plqpf</button>
+                        <button class="option" data-type="plqpf" data-translate="plqpf" >plqpf</button>
                         <button class="option latijn" data-type="fex">fex</button>
                     </div>
                     <div class="option-group">
@@ -131,7 +133,7 @@
                     </div>
                     <div class="option-group">
                         <button class="option" data-type="act">act</button>
-                        <button class="option greekOnly" data-type="med">med</button>
+                        <button class="option greekOnly" data-type="med" data-translate="med" >med</button>
                         <button class="option" data-type="pass">pass</button>
                     </div>
                 </div>
